# SmartRoboticsRos

./: README.md
ros2_ws/src/ai_logic/: package.xml  setup.cfg  setup.py
ros2_ws/src/ai_logic/ai_logic/: path_planner.py  rl_learning.py
ros2_ws/src/ai_logic/description/xacro/: a0912.urdf.xacro  macro.a0912.blue.xacro  macro.gazebo_config_control.xacro
ros2_ws/src/ai_logic/launch/: ai_gazebo_controller.launch.py
ros2_ws/src/ai_logic/worlds/: gazeboWorld.world
ros2_ws/src/gazebo_ros2_control/gazebo_ros2_control/: package.xml
ros2_ws/src/ik_interface/: package.xml
ros2_ws/src/robot_ik/: package.xml  setup.py
